--- a/_config.yml
+++ b/_config.yml
@@ -39,3 +39,12 @@ plugins:
 #   - vendor/cache/
 #   - vendor/gems/
 #   - vendor/ruby/
+
+theme_settings:
+  title: My Jekyll Blog                 # Name of website
+  avatar: assets/img/triangular.svg     # Path of avatar image, to be displayed in the theme's header
+  gravatar: f98....6bfc                 # MD5 hash of your email address
+  description: My blog posts            # Short description, primarily used by search engines
+  header_text: Welcome to my Jekyll blog
+  header_text_feature_image: assets/img/sample3.png
+  footer_text: Copyright 2018
