--- a/_config.yml
+++ b/_config.yml
@@ -48,3 +48,6 @@ theme_settings:
   header_text: Welcome to my Jekyll blog
   header_text_feature_image: assets/img/sample3.png
   footer_text: Copyright 2018
+
+paginate: 5
+paginate_path: "blog/page:num"
