--- a/_config.yml
+++ b/_config.yml
@@ -27,6 +27,8 @@ markdown: kramdown
 theme: type-on-strap
 plugins:
   - jekyll-feed
+  - jekyll-paginate
+  - jekyll-seo-tag
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
