--- a/_config.yml
+++ b/_config.yml
@@ -13,10 +13,10 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Bug Report Podcast
+title: ""
+author: The Bug Report Podcast
 email: ben.everard@raspberrypi.org
-description: >- # this means to ignore newlines until "baseurl:"
-  The home of a new podcast about Linux, technology and Brexit
+description: ""
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: ben_everard
